# binance-rs

./: .env  Cargo.toml
src/: main.rs  sql.rs
