[package]
name = "binance-rs"
version = "0.1.0"
authors = ["Zohaad Fazal <10496606+zohaad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.12"
rust_decimal = "1.9.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
serde_with = { version = "1.6.0", features = ["json"] }
sqlx = { version = "0.4.2", features = ["postgres", "runtime-tokio-native-tls", "time", "decimal", "chrono"] }
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = { version = "0.11", features = ["tls"] }
# tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "io-std"] }
# tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
url = "2.2.0"